feat: calendar module and fix build
