# src/app/api/models/case-partial.ts
@@ -11,6 +11,10 @@ export interface CasePartial {
   created_by?: string;
   deleted?: boolean;
   delivery_date?: string;
+  delivery_date_stage_0?: string;
+  delivery_date_stage_1?: string;
+  delivery_date_stage_2?: string;
+  delivery_date_stage_3?: string;
   doctor_name?: string;
   id?: number;
   isStageFourComplete?: boolean;
@@ -24,6 +28,7 @@ export interface CasePartial {
   patient_name?: string;
   payment_status?: string;
   updated_at?: string;
+  updated_at2?: string;
   updated_by?: string;
   urgent?: boolean;
   userId?: string;
