# src/app/api/models/case-with-relations.ts
@@ -15,6 +15,10 @@ export interface CaseWithRelations {
   created_by?: string;
   deleted?: boolean;
   delivery_date?: string;
+  delivery_date_stage_0?: string;
+  delivery_date_stage_1?: string;
+  delivery_date_stage_2?: string;
+  delivery_date_stage_3?: string;
   doctor_name?: string;
   foreignKey?: any;
   history?: Array<PatientHistoryWithRelations>;
@@ -32,6 +36,7 @@ export interface CaseWithRelations {
   payment_status?: string;
   scan?: Array<ScanWithRelations>;
   updated_at?: string;
+  updated_at2?: string;
   updated_by?: string;
   urgent?: boolean;
   user?: UserWithRelations;
