# src/app/api/models/new-case.ts
@@ -11,6 +11,10 @@ export interface NewCase {
   created_by?: string;
   deleted?: boolean;
   delivery_date?: string;
+  delivery_date_stage_0?: string;
+  delivery_date_stage_1?: string;
+  delivery_date_stage_2?: string;
+  delivery_date_stage_3?: string;
   doctor_name?: string;
   isStageFourComplete?: boolean;
   isStageOneComplete?: boolean;
@@ -23,6 +27,7 @@ export interface NewCase {
   patient_name?: string;
   payment_status?: string;
   updated_at?: string;
+  updated_at2?: string;
   updated_by?: string;
   urgent?: boolean;
   userId?: string;
